# Saxion-Wildlife-Classifier

./: .gitignore  CUDA_in_Docker.md  README.md  main.py  pyproject.toml  run.bat  run.sh  settings.yml
frontend/: custom.css  custom.js  index.html
gui/: Accordion.py  BaseWindow.py  GUIData.py  StatWindow.py  gui.py  main.py  test.py
models/efficient_det/: Dockerfile
models/efficient_det/app/: pyproject.toml
models/efficient_det/app/scripts/: main.py  model.py
models/efficient_det/app/scripts/config/: constants.py  settings.py
models/efficient_det/app/scripts/efficientdet/: model.py
models/yolo/: Dockerfile
models/yolo/app/: pyproject.toml
models/yolo/app/scripts/: main.py  model_yolo.py
models/yolo/app/scripts/classes/: metadata.py
models/yolo/app/scripts/config/: constants.py
models/yolo/app/scripts/model/: model_interface.py
models/yolo/app/scripts/utils/: iou_utils.py  torch_utils.py
postprocessing/: Dockerfile
postprocessing/app/: pyproject.toml
postprocessing/app/scripts/: main.py
postprocessing/app/scripts/classes/: metadata.py
postprocessing/app/scripts/config/: constants.py  settings.py
postprocessing/app/scripts/postprocessing/: postprocess.py  stat_generator.py
postprocessing/app/scripts/utils/: result_statistics.py
util_scripts/: annotations_with_megadetector.py
util_scripts/augmentation/: augment_animals_multiple_directories.py  data.json  filter.py
util_scripts/data_generation/: select_dataset.py
util_scripts/dominique/: annotation_stats.ipynb  combine.ipynb  generate_new_coco_json.py
util_scripts/eventbus/: README.md  docker-compose.yml
util_scripts/eventbus/detectron/: Dockerfile
util_scripts/eventbus/detectron/scripts/: main.py
util_scripts/eventbus/main/: pyproject.toml
util_scripts/eventbus/main/scripts/: main.py
util_scripts/paho_mosquitto/: docker-compose.yml
util_scripts/paho_mosquitto/yolo/: Dockerfile
util_scripts/websocket_prototype/: client.py  server.py
(+4 files in other folders)
